Add OpenShift support (#21)
