# apis/installer/v1alpha1/virtual_secrets_server_types.go
@@ -19,6 +19,7 @@ package v1alpha1
 import (
 	core "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"kmodules.xyz/resource-metadata/apis/shared"
 	kubeopsinstaller "kubeops.dev/installer/apis/installer/v1alpha1"
 )
 
@@ -77,6 +78,8 @@ type VirtualSecretsServerSpec struct {
 	ServiceAccount     ServiceAccountSpec       `json:"serviceAccount"`
 	Apiserver          EASSpec                  `json:"apiserver"`
 	Monitoring         EASMonitoring            `json:"monitoring"`
+	// +optional
+	Distro shared.DistroSpec `json:"distro"`
 	//+optional
 	AceUserRoles AceUserRolesValues `json:"ace-user-roles"`
 }
