# charts/virtual-secrets-server/values.openapiv3_schema.yaml
@@ -1383,6 +1383,20 @@ properties:
     type: object
   criticalAddon:
     type: boolean
+  distro:
+    properties:
+      openshift:
+        type: boolean
+      ubi:
+        enum:
+        - all
+        - catalog
+        - operator
+        type: string
+    required:
+    - openshift
+    - ubi
+    type: object
   fullnameOverride:
     type: string
   image:
